<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?selectableItemBackground"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image_width"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical"
        android:columnCount="3"
        android:rowCount="3"
        android:textColor="@color/textColor"
        android:useDefaultMargins="true">

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/dayWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:text="@string/description"

            android:textColor="@color/textColor" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/description"
            android:textColor="@color/textColor" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/dayTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textColor="@color/textColor"
            android:layout_columnWeight="1"
            android:layout_row="1"

            android:text="@string/temperature" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/minTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textColor="@color/textColor"
            android:layout_columnWeight="1"
            android:layout_row="1"

            android:text="@string/minT" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/maxTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textColor="@color/textColor"
            android:layout_columnWeight="1"
            android:layout_row="1"

            android:text="@string/maxT" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textColor="@color/textColor"
            android:layout_columnWeight="1"
            android:layout_row="2"

            android:text="@string/speed" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textColor="@color/textColor"
            android:layout_columnWeight="1"
            android:layout_row="2"

            android:text="@string/pressure" />

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textColor="@color/textColor"
            android:layout_columnWeight="1"
            android:layout_row="2"

            android:text="@string/humidity" />

    </GridLayout>

</LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>