<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myexamplemetcast.metcast.ui.screen.MetcastActivity"
    tools:showIn="@layout/activity_metcast">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />

    </android.support.design.widget.TextInputLayout>

    <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/enter_day"
        android:textColor="@color/colorPrimaryDark"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.myexamplemetcast.metcast.ui.general.roboto.RegularTextView
            android:id="@+id/tvCountDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pointDay"
            android:textColor="@color/colorPrimaryDark"
            />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:max="16"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMetcast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        >

    </android.support.v7.widget.RecyclerView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible" />
</LinearLayout>
