<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbDayForecast"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreen"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreen"
    android:orientation="vertical"
    android:padding="@dimen/padding_detail"

    tools:context="com.myexamplemetcast.metcast.ui.screen.DetailMetcastActivity"
    tools:showIn="@layout/activity_detail_metcast">

    <TextView
        android:id="@+id/dayWeekDeit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/day_week"
        android:textColor="@color/colorDayOfWeek"
        android:textSize="@dimen/textSize_dayOfWeek"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgDeit"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_detail"
        android:layout_weight="6"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/description"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/descriptiondayDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_temperature"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"

            />

        <TextView
            android:id="@+id/dayTemperatureDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/min_temperature"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/minDayDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/max_temperature"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/maxDayDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/wind_speed"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/windSpeedDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/pressure"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/pressureDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_description"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/humidity"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/humidityDeit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_margin_value"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="dfa"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
</LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
